--- a/part3/src/app/components/dashboard/dashboard.component.html
+++ b/part3/src/app/components/dashboard/dashboard.component.html
@@ -6,6 +6,8 @@
     </div>
   </div>
   <div class="row mt-5">
-    <div class="col-12"></div>
+<!--     <div class="col-12">
+      <AlertsCard metaData="data"></AlertsCard>
+    </div> -->
   </div>
 </div>
