--- a/part3/src/app/app.component.html
+++ b/part3/src/app/app.component.html
@@ -28,3 +28,9 @@
     <Dashboard *ngIf="auth?.token"></Dashboard>
   </div>
 </div>
+
+
+<!-- If the user has no breaches (suggestPasswordChange is not set) make the Alerts card background color white -->
+  <!-- No alerts -->
+
+<!-- If a user has been involved in any breaches we want to make the background color of the Alerts card yellow -->
