--- a/part3/src/app/components/dashboard/dashboard.component.html
+++ b/part3/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,10 @@
 <div>
   <h2 class="mt-3">Dashboard</h2>
+    <div class="row mt-5">
+    <div class="col-12">
+      <AlertsCard [meta]="auth.meta"></AlertsCard>
+    </div>
+  </div>
   <div class="row mt-5">
     <div class="col-12">
       <TasksCard></TasksCard>
