--- a/part3/src/app/components/cards/alert-card/alert-card.component.html
+++ b/part3/src/app/components/cards/alert-card/alert-card.component.html
@@ -1,18 +1,9 @@
-<div>
-  <h2 class="mt-3">Dashboard</h2>
-  <div class="row mt-5">
-    <div class="col-12">
-      <TasksCard></TasksCard>
-<!--       <AlertCard></AlertCard> -->
-      <div class="card bg-warning">
+<div class="card" bg-warning>
   <div class="card-header">Your email was involved in a breach on the following sites:</div>
   <div class="card-body">
     <div>
       Your email was involved in a breach on the following sites:    
     </div>
-    <!--  this is also wrong bu    -->
-    *ngFor= "let breach loginSuccess.meta.breaches"
-    [breach]=
     <ul class="list-group list-group-flush">
       <li class="list-group-item">facebook</li>
       <li class="list-group-item">insta</li>
@@ -23,16 +14,6 @@ recommend you change your password in case your AppCo
 account shares a password with any of the sites above.
     </div>
     <button>Change password</button>
-            <button
-          class="primary"
-          type="button"
-          (click)="dismissAlert()"
-        >>Dismiss</button>
-  </div>
-</div>
-
-  </div>
-  <div class="row mt-5">
-    <div class="col-12"></div>
+    <button>Dismiss</button>
   </div>
 </div>
