--- a/part3/src/app/components/dashboard/dashboard.component.html
+++ b/part3/src/app/components/dashboard/dashboard.component.html
@@ -2,6 +2,7 @@
   <h2 class="mt-3">Dashboard</h2>
   <div class="row mt-5">
     <div class="col-12">
+      <AlertsCard></AlertsCard>
       <TasksCard></TasksCard>
     </div>
   </div>
